--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.34",
         "symfony/monolog-bundle": "^3.0",
