Split name of table and field

--- a/config/routes/symfotab.yaml
+++ b/config/routes/symfotab.yaml
@@ -1,4 +1,4 @@
 controller:
-    prefix: /synfo-table
+    prefix: /symfo-table
     type: annotation
     resource: '@MazariniSymfoTabBundle/Controller'
